<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessPhrase</string>
    <string name="game_save_file_name">gameState.json</string>
    <string name="title_activity_menu">Start Game</string>
    <string name="newGame">New Game</string>
    <string name="resumeGame">Resume Game</string>
    <string name="gameSaved">Game Saved.</string>
    <string name="title_activity_select_category">Category Selection</string>
    <string name="getwinner_prompt">Who won this round?</string>
    <string name="getwinner_result">didT1win</string>
    <string name="game_over">Game Over</string>
    <string name="congratsT1">Congratulations, Team 1!</string>
    <string name="congratsT2">Congratulations, Team 2!</string>
    <string name="play_again">Play Again</string>
    <string name="T1name">Team 1</string>
    <string name="T2name">Team 2</string>
    <string name="select_category">Select Category:</string>
    <string name="category_general_label">General</string>
    <string name="category_animals_label">Animals</string>
    <string name="category_food_label">Food</string>
    <string name="category_united_states_label">United States</string>
    <string name="category_geography_label">Geography</string>
    <string name="category_sports_label">Sports</string>
    <string name="category_entertainment_label">Entertainment</string>
    <string name="category_dirty_label">Sex, Drugs, and Alcohol</string>

    <string name="action_add_category">Add Category</string>
    <string name="error_connection_required_title">Connection Required</string>
    <string name="error_connection_required_message">Downloading custom categories requires a network connection.</string>

    <string name="action_add_category_help">Help</string>
    <string name="add_category_help_message">
        GuessPhrase allows you to leverage the collective knowledge of the internet in order to create custom categories.
        This is accomplished using the idea that the page links on a Wikipedia page form a set of loosely related phrases.
        Use the form to search for Wikipedia pages on which to base your category.
        Ex: "List of Presidents of the United States".
    </string>
    <string name="how_to_play_button">How to Play</string>
    <string name="how_to_play">
        GuessPhrase is played like the Hasbro team-based phrase-guessing game, Catch Phrase.
        One player begins trying to get their team to say the phrase shown on screen,
        but cannot say what it rhymes with, how many syllables/words it has,
        the first letter of any word, or any part of the phrase.
        Once the team guesses correctly, the other team takes a turn.
        When the timer runs out, the team not holding the device scores a point.
        The first team to 7 points wins.
    </string>
    <string name="confirm_delete_dialog_title">Confirm Deletion</string>
    <string name="confirm_delete_dialog_head">Are you sure you wish to delete the category \"</string>
    <string name="confirm_delete_dialog_tail">\"?</string>
    <string name="category_not_found_head">Category file \"</string>
    <string name="category_not_found_tail">\" not found.</string>
    <string name="game_load_error">Error Loading Game</string>
    <string name="warning_category_in_saved_game">
        This category is used by the saved game.
        Deleting it will also delete the saved game.
    </string>

    <string name="title_activity_add_category">Add Category</string>
    <string name="title_label">Title</string>
    <string name="wiki_bases_label">Wikipedia Pages</string>
    <string name="remove_wiki_base">-</string>
    <string name="wiki_base_searcher_hint">Search Wikipedia</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="category_saved">Category Saved.</string>
    <string name="category_saved_detail">has been downloaded.</string>
    <string name="error_invalid_category">Invalid Category</string>
    <string name="error_no_category_name">You must provide a title for the category.</string>
    <string name="error_no_wiki_pages_selected">You must enter at least one Wikipedia page on which to base your category.</string>
    <string name="okay">OK</string>

    <string name="delete">Delete</string>
    <string name="delete_default_category">Cannot delete default category.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="action_edit_settings">Change Preferences</string>
    <string name="vibration_checkbox_label">Vibrate</string>
    <string name="done">Done</string>

</resources>
