<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.tjaz.guessphrase.SelectCategoryActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:text="@string/select_category"
            />

        <CheckBox
            android:id="@+id/generalCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_general_label"
            />

        <CheckBox
            android:id="@+id/animalCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_animals_label"
            />

        <CheckBox
            android:id="@+id/foodCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_food_label"
            />

        <CheckBox
            android:id="@+id/unitedStatesCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_united_states_label"
            />

        <CheckBox
            android:id="@+id/geographyCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_geography_label"
            />

        <CheckBox
            android:id="@+id/sportsCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_sports_label"
            />

        <CheckBox
            android:id="@+id/entertainmentCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_entertainment_label"
            />

        <CheckBox
            android:id="@+id/dirtyCategoryCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_dirty_label"
            />

        <Button
            android:id="@+id/categorySelectDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSelectCategoryDonePressed"
            android:text="@string/category_select_done_label"
            />

    </LinearLayout>

</ScrollView>